# MyChatServer

./: CMakeLists.txt  README.md  autobuild.sh
include/: public.hpp
include/server/: chatservice.hpp
include/server/model/: offlinemessagemodel.hpp  user.hpp  usermodel.hpp
src/client/: main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
test/: CMakeLists.txt
test/testjson/: a.out  testjson.cpp
test/testmuduo/: CMakeLists.txt  muduo_server.cpp
