# cmake_minimum_required(VERSION 2.8)  #要求cmake最低的版本号
# project(main)  # 定义当前工程名字


# # 配置编译选项
# set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -g)  # 作用是将 -g 编译选项添加到 CMAKE_CXX_FLAGS 变量中，以便在编译 C++ 代码时生成调试信息

# 配置头文件搜索路径
# include_directories()
# 配置库文件搜索路径
# link_directories()

#设置可执行文件最终存储的路径
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

# 设置需要编译的源文件列表
set(SRC_LIST ./muduo_server.cpp)

# 把.指定路径下的所有源文件名字放入变量名SRC_LIST里面
# aux_source_directory(. SRC_LIST)


# add_executable(server muduo_server.cpp)         # 作用是将 muduo_server.cpp 编译成一个名为 server 的可执行文件
# 表示生成可执行文件server，由SRC_LIST变量所定义的源文件编译而来
add_executable(server ${SRC_LIST})

# 表示server这个目标程序，需要连接muduo_net muduo_base pthread这三个库文件
target_link_libraries(server muduo_net muduo_base pthread)







